--- a/src/templates/SearchForm/styles.css
+++ b/src/templates/SearchForm/styles.css
@@ -15,9 +15,24 @@ form > * {
 
 .submit-btn {
   align-items: center;
+  background: rgb(6, 97, 99, .8);
+  border: none;
+  border-radius: 5px;
   box-shadow: #858383 0 2px 7.5px;
+  color: #fff;
+  cursor: pointer;
   display: flex;
   font-weight: 500;
   height: 3.5vh;
   padding: 0 10px;
+  transition: 0.5s;
+}
+
+.submit-btn:disabled {
+  background: rgb(6, 97, 99, .6);
+  cursor: default;
+}
+
+.submit-btn:hover {
+  background: #066163;
 }
