--- a/src/templates/Header/styles.css
+++ b/src/templates/Header/styles.css
@@ -1,6 +1,6 @@
 header {
   align-items: center;
-  background-color: #CDBE78;
+  background-color: #cdbe78;
   border-bottom: 1px groove #fff;
   box-shadow: #858383 0 2px 15px;
   color: #fff;
