--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -10,6 +10,27 @@
   width: 10vw;
 }
 
+.navigation-btns > * {
+  align-items: center;
+  background: rgb(6, 97, 99, 0.8);
+  border: none;
+  border-radius: 5px;
+  box-shadow: #858383 0 2px 7.5px;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  font-weight: 500;
+  height: 3.5vh;
+  padding: 0 5px;
+  transition: 0.5s;
+}
+
+.previous-btn:disabled,
+.next-btn:disabled {
+  background: rgb(6, 97, 99, 0.6);
+  cursor: default;
+}
+
 .loading {
   margin-top: 5vh;
 }
